--- a/octocnc/templates/octocnc_tab.jinja2
+++ b/octocnc/templates/octocnc_tab.jinja2
@@ -1,7 +1,7 @@
 <div class="input-append">
-    <input type="text" class="input-xxlarge" data-bind="value: newUrl">
-    <button class="btn btn-primary" data-bind="click: goToUrl">{{ _('Go') }}</button>
+    <button class="btn btn-primary">My Button</button>
 </div>
-
-
-<iframe data-bind="attr: {src: currentUrl}" style="width: 100%; height: 600px; border: 1px solid #808080"></iframe>
+<object data="{{  url_for("plugin.octocnc.static", filename="imgs/lathe.svg") }}" type="image/svg+xml" id="lathe_control" width="100%" height="100%"></object>
+<div>
+    {{  url_for("plugin.octocnc.static", filename="imgs/lathe.svg") }}
+</div>
