making svg assets consistent, based on illustrator svg export. restructuring output path.

--- a/octocnc/templates/octocnc_index.jinja2
+++ b/octocnc/templates/octocnc_index.jinja2
@@ -27,7 +27,7 @@
       "plugin_uri": "/plugin/octocnc/static/"
   }</script>
 
-  <script src="{{ url_for("plugin.octocnc.static", filename="js/bundle.js") }}?{{ range(1, 100) | random }}"></script>
+  <script src="{{ url_for("plugin.octocnc.static", filename="dist/bundle.js") }}?{{ range(1, 100) | random }}"></script>
 </body>
 
 </html>
