--- a/src/app/containers/commands/list.scss
+++ b/src/app/containers/commands/list.scss
@@ -94,3 +94,16 @@
   padding-top:5px;
 
 }
+
+.command {
+    text-align:left;
+    font-family: 'monospace';
+    font-size: 16px;
+}
+
+.date {
+  font-style: italic;
+  font-size: 12px;
+  float: right;
+  padding-right:20px;
+}
