fixing svg display, font awesome icons. completed digit display

--- a/octocnc/templates/octocnc_index.jinja2
+++ b/octocnc/templates/octocnc_index.jinja2
@@ -23,7 +23,7 @@
 
   <script type="application/json" id="_server_config">{
       "base_uri": "{{ url_for('index') }}",
-      "api_key": "{{ uiApiKey|e }}",
+"api_key": "FBFD28790DEA44638A7AC5FBF9AC7B26",
       "plugin_uri": "/plugin/octocnc/static/",
       "user_management": {{ user_management|tojson }}
   }</script>
