--- a/app/src/containers/dro/dro.scss
+++ b/app/src/containers/dro/dro.scss
@@ -1,18 +1,45 @@
 
-  .digit {
-    display:inline-block;
-    width: 55px;
-    &.title {
-      width: 45px;
-    }
+.digit {
+  display:inline-block;
 
-    &.units {
-      width: 40px;
-    }
-
+  @media(min-width:480px) {
+    width:15px;
   }
 
-  .decimal {
-    display:inline-block;
-    width: 16px;
+  @media(min-width:960px) {
+    width:20px;
   }
+  @media(min-width:1260px) {
+    width:40px;
+  }
+
+
+
+
+  //&.title {
+  //  width: 45px;
+  //}
+  //
+  //&.units {
+  //  width: 30px;
+  //}
+
+
+}
+
+
+
+
+.decimal {
+  display:inline-block;
+  width: 12px;
+}
+
+input.destination {
+  height: 45px;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  font-size: 35px;
+}
+
+
