--- a/app/src/containers/dro/dro.scss
+++ b/app/src/containers/dro/dro.scss
@@ -10,7 +10,7 @@
     width:20px;
   }
   @media(min-width:1260px) {
-    width:40px;
+    width:25px;
   }
 }
 
@@ -34,5 +34,15 @@ input.destination {
   }
 }
 
+.clickable-axis {
+  &.active {
+    border:1px solid black;
+  }
 
+}
 
+.dro-panel {
+  background: white;
+  border-radius: 10px;
+  min-height: 325px
+}
